<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/baby_blue">
        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:elevation="12dp"
            android:id="@+id/photo_cardview"
            app:cardCornerRadius="150dp"
            android:thicknessRatio="7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/profile_photo_iv"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_baseline_add_contact" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_et_hint_text"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxEms="9"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="15dp"
        android:digits="0123456789"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/name_et_hint_text"
        android:fontFamily="sans-serif-light"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxEms="9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/address_et_hint_text"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxEms="9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/date_of_birth_et_hint_text"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxEms="9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_of_birth_et"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="200dp"
        >
        <Button
            android:id="@+id/accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/pigeon_post"
            android:text="@string/accept_btn_text"
            android:background="@color/pigeon_post"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>

</ScrollView>